Added dynamic messages to authentication and character selection screens

--- a/lib/views/account.ejs
+++ b/lib/views/account.ejs
@@ -15,7 +15,7 @@
 
 	<p>
           <u>Start Playing:</u></br>
-          <input id="play" type="button" value="Play" onclick="window.location.href = '/play';">
+          <input id="play" type="button" value="Play">
         </p>
 
         <p>
@@ -26,18 +26,18 @@
               <option value=<%= characters[i].id %>> <%= characters[i].name %> (#<%= characters[i].id %>)</option>
           <% }  %>
           </select>
-          <input id="select" type="button" value="Select Character" onclick="javascript:post('/select_character', {character: parseInt($('#charselect').val())}, function f(data) { window.location.href = '/account'; })">
+          <input id="select" type="button" value="Select Character">
         </p>
 
         <p>
           <u>Create New Character:</u></br>
           Name: <input id="name" type="text" style="width: 150px">
-          <input id="create" type="button" value="Create Character"  onclick="javascript:post('/create_character', {name: $('#name').val()}, function f(data) { window.location.href = '/account'; })">
+          <input id="create" type="button" value="Create Character">
         </p>
 
         <p>
           <u>Logout:</u></br>
-          <input id="logout" type="button" value="Logout" onclick="window.location.href = '/logout';">
+          <input id="logout" type="button" value="Logout">
         </p>
 
       </form>
@@ -45,6 +45,67 @@
   </div>
 
 </center>
+<script type='text/javascript'>
+  $(document).ready(function() {
+    // ADD ON-LOAD STUFF HERE IF DESIRED
+  });
+
+  $('#play').click(function() {
+    window.location.href = '/play';
+  });
+
+  $('#select').click(function() {
+    post('/select_character', {character: parseInt($('#charselect').val())}, function(data) { handle_select_response(data) });
+  });
+
+  $('#create').click(function() {
+    post('/create_character', {name: $('#name').val()}, function(data) { handle_create_response(data) });
+  });
+
+  $('#logout').click(function() {
+    window.location.href = '/logout';
+  });
+
+  function handle_select_response(data) {
+    if (data.err == 0) {
+      window.location.href = '/account';
+    } else {
+      var errMessage = "";
+      switch(data.err) {
+        case -220:
+          errMessage = "Please select a character."; break;
+        case -999:
+          window.location.href = '/logout'; break;
+        default:
+          errMessage = "UNKNOWN ERROR: " + data.err;
+      }
+      update_welcome_text(errMessage);
+    }
+  }
+
+  function handle_create_response(data) {
+    if (data.err == 0) {
+      window.location.href = '/account';
+    } else {
+      var errMessage = "";
+      switch(data.err) {
+        case -200:
+          errMessage = "The character name should be between 1 and 16 characters. Try again."; break;
+        case -210:
+          errMessage = "A character with the given name already exists. Try again."; break;
+        case -999:
+          window.location.href = '/logout'; break;
+        default:
+          errMessage = "UNKNOWN ERROR: " + data.err;
+      }
+      update_welcome_text(errMessage);
+    }
+  }
+
+  function update_welcome_text(msg) {
+    $('#welcometext').html(msg);
+  }
+</script>
 </body>
 </html>
 
