--- a/lib/views/index.ejs
+++ b/lib/views/index.ejs
@@ -9,16 +9,73 @@
   <body>
   <center>
   <h1>A NEW MMO</h1>
-  <div id="login" style="width:300px;height:250px;padding:5px 5px 5px 5px;margin:5px 5px 5px 5px;border:5px solid blue;background-color:lightgreen;" class="box">
+  <div id="loginbox" style="width:300px;height:250px;padding:5px 5px 5px 5px;margin:5px 5px 5px 5px;border:5px solid blue;background-color:lightgreen;" class="box">
     <center>
-    <b><div id="logintext" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid blue;background-color:skyblue" class="message">Please login or register to play! Username and password should be 1 to 16 characters long.</div></b>
+    <b><div id="logintext" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid blue;background-color:skyblue" class="message">Please login or register to play!</div></b>
     <form>
     Username: <input type="text" id=username></br>
     Password: <input type="password" id=password></br>
-    <input type="button" value="Login" onclick="javascript:post('/login', {user: $('#username').val(), password: $('#password').val()}, function f(data) { window.location.href = '/account'; })">
-    <input type="button" value="Register" onclick="javascript:post('/register', {user: $('#username').val(), password: $('#password').val()}, function f(data) { window.location.href = '/account'; })">
+    <input id="login" type="button" value="Login">
+    <input id="register" type="button" value="Register">
     </center>
   </div>
   </center>
+<script type='text/javascript'>
+  $(document).ready(function() {
+    // ADD ON-LOAD STUFF HERE IF DESIRED
+  });
+
+  $('#login').click(function() {
+    post('/login', {user: $('#username').val(), password: $('#password').val()}, function(data) { handle_login_response(data) });
+  });
+
+  $('#register').click(function() {
+    post('/register', {user: $('#username').val(), password: $('#password').val()}, function(data) { handle_register_response(data) });
+  });
+
+  function handle_login_response(data) {
+    if (data.err == 0) {
+      window.location.href = '/account';
+    } else {
+      var errMessage = "";
+      switch(data.err) {
+        case -101:
+          errMessage = "Wrong username or password. Try again."; break;
+        case -111:
+          errMessage = "Wrong username or password. Try again."; break;
+        case -999:
+          errMessage = "A user is currently already logged in. Log out first and try again."; break;
+        default:
+          errMessage = "UNKNOWN ERROR: " + data.err;
+      }
+      update_login_box(errMessage);
+    }
+  }
+
+  function handle_register_response(data) {
+    if (data.err == 0) {
+      window.location.href = '/account';
+    } else {
+      var errMessage = "";
+      switch(data.err) {
+        case -100:
+          errMessage = "The username and password should be between 1 and 16 characters. Try again."; break;
+        case -110:
+          errMessage = "A user with the given username already exists. Try again."; break;
+        case -999:
+          errMessage = "A user is currently already logged in. Log out first and try again."; break;
+        default:
+          errMessage = "UNKNOWN ERROR: " + data.err;
+      }
+      update_login_box(errMessage);
+    }
+  }
+
+  function update_login_box(errMessage) {
+    $('#username').val("");
+    $('#password').val("");
+    $('#logintext').html(errMessage);
+  }
+</script>
   </body>
 </html>
