--- a/lib/views/play.ejs
+++ b/lib/views/play.ejs
@@ -178,7 +178,7 @@
       var render = function () {
         if (should_render) {
           ctx.clearRect(0, 0, TILE_SIZE * AREA_WIDTH, TILE_SIZE * AREA_HEIGHT);
-
+          
           var img1 = new Image();
           var img2 = new Image();
           var img3 = new Image();
@@ -196,8 +196,10 @@
           var floor = ctx.createPattern(img1,"repeat");
           var wall = ctx.createPattern(img2,"repeat");
           var portal = ctx.createPattern(img3,"repeat");
-                
+          
+          
           // Draw the area's terrain
+/*
           for(var i = 0; i < areamap.length-1; i++) {
               var x = i % AREA_WIDTH;
               var y = (i - x) / AREA_WIDTH;
@@ -211,7 +213,31 @@
               }
               ctx.fillRect(x * TILE_SIZE, y * TILE_SIZE, TILE_SIZE, TILE_SIZE);
           }
-
+*/
+          for(var i = 0; i < areamap.length-1; i++) {
+              var x = i % AREA_WIDTH;
+              var y = (i - x) / AREA_WIDTH;
+              ctx.fillStyle = floor;
+              if (areamap[i+1] == 'A') {
+                ctx.fillRect(x * TILE_SIZE, y * TILE_SIZE, TILE_SIZE, TILE_SIZE);
+              }
+          }
+          for(var i = 0; i < areamap.length-1; i++) {
+              var x = i % AREA_WIDTH;
+              var y = (i - x) / AREA_WIDTH;
+              ctx.fillStyle = wall;
+              if (areamap[i+1] == 'B') {
+                ctx.fillRect(x * TILE_SIZE, y * TILE_SIZE, TILE_SIZE, TILE_SIZE);
+              }
+          }
+          for(var i = 0; i < areamap.length-1; i++) {
+              var x = i % AREA_WIDTH;
+              var y = (i - x) / AREA_WIDTH;
+              ctx.fillStyle = portal;
+              if (areamap[i+1] == 'C') {
+                ctx.fillRect(x * TILE_SIZE, y * TILE_SIZE, TILE_SIZE, TILE_SIZE);
+              }
+          }
           // Draw currently logged-in character
           ctx.fillStyle = "#CC0000";
           ctx.fillRect(boxman.x * TILE_SIZE, boxman.y * TILE_SIZE, TILE_SIZE, TILE_SIZE);
