adding some NPC-related stuff

--- a/lib/views/play.ejs
+++ b/lib/views/play.ejs
@@ -7,17 +7,18 @@
     <center>
     <script src="/socket.io/socket.io.js"></script>
     <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    
-    <div id="charbox" style="float:left;width:150px;margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid black;background-color:gold;" class="box">
+
+    <div id="charbox" style="float:top;width:300px;overflow-x:visible;margin:3px 3px 3px 3px;padding:1px 1px 1px 1px;border:3px solid black;background-color:gold;" class="box">
       <div id="char" style="float:center;">
         <p>
-          <div id="charname"></div><br />
-          <div id="charlvl"></div>
-          <div id="charhp"></div>
-          <div id="charmp"></div>
+          <span id="charname"></span><br />
+          <span id="charlvl"></span> &diams; 
+          <span id="charhp"></span> &diams; 
+          <span id="charmp"></span>
         </p>
       </div>
     </div>
+
     <script>
       var socket = io.connect('/');
 
@@ -268,9 +269,9 @@
       /* Display the character's information. */
       var displayinfo = function () {
         $('#charname').html("<b><%= character.name %></b>");
-        $('#charlvl').html("LVL <%= character.level %>");
+        $('#charlvl').html("Lvl. <%= character.level %>");
         $('#charhp').html("HP: <%= character.current_health_points %> / <%= character.health_points %>");
-        $('#charmp').html("HP: <%= character.current_magic_points %> / <%= character.magic_points %>");
+        $('#charmp').html("MP: <%= character.current_magic_points %> / <%= character.magic_points %>");
       };
 
       /* Update character information and graphical display. */
@@ -293,7 +294,7 @@
       setInterval(main, 1);
       setInterval(move, 100);
     </script>
-
+    
     <div id="menu">
       <form>
         <p>
