--- a/lib/views/play.ejs
+++ b/lib/views/play.ejs
@@ -50,6 +50,11 @@
         should_render = true;
       });
 
+      socket.on('chat', function(data) {
+      var div = document.getElementById('chatbox');
+      div.innerHTML = div.innerHTML + '</br>' + data.name + ' - ' + data.message;
+      });
+
       /* Retrieve Portal Locations and Destinations */
       socket.on('getportals', function(data) {
         if (areaname == "forest") {
@@ -80,12 +85,35 @@
       socket.emit('getmap', {});
       socket.emit('getportals', {});
     </script>
-
+    <style type="text/css">
+    div.inline {float:left; }
+    .clearBoth {clear:both; }
+    </style>
+    <div class="inline">
     <canvas id="myCanvas" width="500" height="500" style="overflow:hidden;border:1px solid #c3c3c3;">
     Your browser does not support the HTML5 canvas tag.
     </canvas>
-
+    </div>
+    <div class="inline">
+    <div id="chatbox" style="width:300px; height:300px; overflow:scroll">
+    </div>
+    <textarea id="mychat" rows=3 cols=35>
+    </textarea>
+    </div>
+    </br class="clearBoth">
     <script>
+      var sendChat = function () {
+        var txt = $("#mychat").val();
+        socket.emit('chat', {message:  txt}); 
+        $("#mychat").val("");
+      };
+      
+      $(document).keypress(function(e) {
+        if (e.which == 13) {
+          sendChat();
+        }
+      });
+       
       var boxman = {
           x: <%= character.xpos %>,
           y: <%= character.ypos %>,
@@ -122,7 +150,7 @@
           keysDown[e.keyCode] = true;
       }, false);
 
-      /* Handles key releases. */
+      /* Handles key releases. */ 
       addEventListener("keyup", function (e) {
           delete keysDown[e.keyCode];
       }, false);      
