Made chat slightly prettier, adding test cases

--- a/lib/views/battlescreen.ejs
+++ b/lib/views/battlescreen.ejs
@@ -302,8 +302,8 @@
    * The fleer must be a character or enemy. */
   function flee(fleer) {
     defending = false;
-    var battleDice = Math.floor((Math.random() * 10) + 1);
-    if (battleDice > 5) {
+    var battleDice = Math.floor((Math.random() * character.speed) + 1);
+    if (battleDice > 0) {
       display("You've fled the battle!");
       showNextMenu('end');
     } else {
@@ -319,6 +319,9 @@
     var newLevel = character.level + levelIncrease;
     character.level = newLevel;
     character.experience = newExperience;
+    character.physical_attack += levelIncrease;
+    character.magic_attack += levelIncrease;
+    character.speed += levelIncrease;
     totalEXPGained += monster.experience;
     var cLevel = character.level.toString();
     var cExperience = character.experience.toString();
