--- a/lib/views/play.ejs
+++ b/lib/views/play.ejs
@@ -52,7 +52,7 @@
 
       socket.on('chat', function(data) {
       var div = document.getElementById('chatbox');
-      div.innerHTML = div.innerHTML + '</br>' + data.name + ' - ' + data.message;
+      div.innerHTML = div.innerHTML + '</br><b>' + data.name + '</b>: ' + data.message;
       });
 
       /* Retrieve Portal Locations and Destinations */
@@ -95,7 +95,7 @@
     </canvas>
     </div>
     <div class="inline">
-    <div id="chatbox" style="width:300px; height:300px; overflow:scroll">
+    <div id="chatbox" style="width:300px; height:300px; overflow:scroll; text-align:left; padding: 5px 5px 5px 5px; font-size: small;">
     </div>
     <textarea id="mychat" rows=3 cols=35>
     </textarea>
@@ -104,6 +104,9 @@
     <script>
       var sendChat = function () {
         var txt = $("#mychat").val();
+        if (txt.length > 100) {
+          txt = txt.substring(0, 100)
+        }
         socket.emit('chat', {message:  txt}); 
         $("#mychat").val("");
       };
