incorperated character sprite in battle

--- a/lib/views/battlescreen.ejs
+++ b/lib/views/battlescreen.ejs
@@ -125,6 +125,7 @@
           ctx.clearRect(0, 0, TILE_SIZE * AREA_WIDTH, TILE_SIZE * AREA_HEIGHT);
 
           var img1 = new Image();
+          var img2 = new Image();
 
           //Terrain Choice
           if (areamap[0] == 'F') { 
@@ -132,6 +133,7 @@
           } else if (areamap[0] == 'M') {
             img1.src = "/images/MountainFloor.png";
           }
+          img2.src = "/images/chars.png";
           var floor = ctx.createPattern(img1,"repeat");
                 
           // Draw the area's terrain
@@ -144,8 +146,7 @@
           }
 
           // Draw currently logged-in character
-          ctx.fillStyle = "#CC0000";
-          ctx.fillRect(4 * TILE_SIZE, 4 * TILE_SIZE, TILE_SIZE, TILE_SIZE);
+          ctx.drawImage(img2, 75, 0, 25, 25, 4 * TILE_SIZE, 4 * TILE_SIZE, TILE_SIZE, TILE_SIZE);
 
           // Draw monster
           ctx.fillStyle = "#000000";
