--- a/lib/views/battlescreen.ejs
+++ b/lib/views/battlescreen.ejs
@@ -149,8 +149,9 @@
           ctx.drawImage(img2, 75, 0, 25, 25, 4 * TILE_SIZE, 4 * TILE_SIZE, TILE_SIZE, TILE_SIZE);
 
           // Draw monster
-          ctx.fillStyle = "#000000";
-          ctx.fillRect(15 * TILE_SIZE, 4 * TILE_SIZE, TILE_SIZE, TILE_SIZE);
+          //ctx.fillStyle = "#000000";
+          //ctx.fillRect(15 * TILE_SIZE, 4 * TILE_SIZE, TILE_SIZE, TILE_SIZE);
+          ctx.drawImage(img2, 25, 25, 25, 25, 15 * TILE_SIZE, 4 * TILE_SIZE, TILE_SIZE, TILE_SIZE);
           
 
           // Draw the area's grid
